# HCC

./: .env.example  .gitignore
assets/fonts/: heroscape-fonts.css
client/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/functions/api/: [[path]].ts
client/src/: App.tsx  main.tsx  styles.css
client/src/editor/: Canvas.tsx  CustomThemePanel.tsx  ImageSidebar.tsx  PowersEditor.tsx  TemplateSelector.tsx  emblems.ts  state.ts  text.ts  theme.ts  types.ts
client/src/lib/: api.ts
client/src/pages/: EditorPage.tsx  Projects.tsx
client/src/projects/: ProjectsPanel.tsx
point-model/: cards.csv  download.py  extract.py  pyproject.toml  train.py
reference/: index.html  sandbox.js
server/: .env.example  package-lock.json  package.json
server/prisma/: schema.prisma
server/prisma/migrations/20251011171447_init/: migration.sql
server/prisma/migrations/20251012210254_add_custom_theme_fields/: migration.sql
server/prisma/migrations/20251012211102_add_user_themes/: migration.sql
server/src/: index.js
