[project]
name = "point-model"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.82.0",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "transformers>=5.2.0",
    "xgboost>=3.2.0",
]
